--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -6,8 +6,26 @@ html
     link(rel='stylesheet', href='/bootstrap/css/superhero.bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    .navbar.navbar-default.navbar-fixed-top
+      .container
+        .navbar-header
+          a.navbar-brand(href='/') Freshness
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+        #navbar-main.navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li
+              a(href='/about/') About
+
+  .container
     block content
 
+    footer
+      .row
+        .col-xs-12
+          small &copy; Armando Robledo 2016
 
     script(src='/javascripts/jquery.js')
     script(src='/bootstrap/js/bootstrap.min.js')
