Location review and About views

--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -28,4 +28,4 @@ block content
             span.label.label-warning LINK accepted
             &nbsp;
     .col-xs-12.col-sm-4
-      p. Are you looking for fresh, local fruits and vegetables? How about some artisan cheese or freshly picked flowers? Freshness helps you find the nearest Farmers Market!
+      p Are you looking for fresh, local fruits and vegetables? How about some artisan cheese or freshly picked flowers? Freshness helps you find the nearest Farmers Market!
