--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -1,31 +1,27 @@
 extends layout
 
+include _includes/sharedHTMLfunctions
+
 block content
   #banner.page-header
     .row
       .col-lg-6
-        h1 Freshness
-          small &nbsp;Find a local Farmers Market or grower near you!
+        h1= pageHeader.title
+         small &nbsp;#{pageHeader.strapline}
   .row
     .col-xs-12.col-sm-8
       .row.list-group
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Logan Square Farmers Market
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star-empty
-              span.glyphicon.glyphicon-star-empty
-            span.badge.pull-right.badge-default 100m
-          p.address 3107 W. Logan Blvd.
-          p
-            span.label.label-warning Sundays
-            &nbsp;
-            span.label.label-warning May 15–October 30, 10am–3pm
-            &nbsp;
-            span.label.label-warning LINK accepted
-            &nbsp;
+        each location in locations
+          .col-xs-12.list-group-item
+            h4
+              a(href="/location")= location.name
+              small &nbsp;
+                +outputRating(location.rating)
+              span.badge.pull-right.badge-default= location.distance
+            p.address= location.address
+            p
+              each facility in location.facilities
+                span.label.label-warning= facility
+                &nbsp;
     .col-xs-12.col-sm-4
-      p Are you looking for fresh, local fruits and vegetables? How about some artisan cheese or freshly picked flowers? Freshness helps you find the nearest Farmers Market!
+      p.lead= sidebar
