--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -9,7 +9,7 @@ html
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/') Freshness
+          a.navbar-brand(href='/') SoFresh & SoGreen
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
@@ -29,4 +29,3 @@ html
 
     script(src='/javascripts/jquery.js')
     script(src='/bootstrap/js/bootstrap.min.js')
-    script(src='/javascripts/validation.js')
