--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -14,7 +14,7 @@ block content
           p= location.address
           .panel.panel-primary
             .panel-heading
-              h2.panel-title Opening hours
+              h2.panel-title Open May 15–October 30
             .panel-body
               each time in location.openingTimes
                 p
@@ -42,7 +42,7 @@ block content
         .col-xs-12
           .panel.panel-primary.review-panel
             .panel-heading
-              a.btn.btn-default.pull-right(href="/location/#{location._id}/review/new") Add review
+              a.btn.btn-default.pull-right(href="/location/review/new") Add review
               h2.panel-title Customer reviews
             .panel-body.review-container
               each review in location.reviews
@@ -52,8 +52,7 @@ block content
                       span.rating
                         +outputRating(review.rating)
                       span.reviewAuthor #{review.author}
-                      small.reviewTimestamp
-                        +formatDate(review.createdOn)
+                      small.reviewTimestamp #{review.timestamp}
                     .col-xs-12
                       p !{(review.reviewText).replace(/\n/g, '<br/>')}
     .col-xs-12.col-md-3
