--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -10,12 +10,11 @@ block content
          small &nbsp;#{pageHeader.strapline}
   .row
     .col-xs-12.col-sm-8
-      .error= message
       .row.list-group
         each location in locations
           .col-xs-12.list-group-item
             h4
-              a(href="/location/#{location._id}")= location.name
+              a(href="/location")= location.name
               small &nbsp;
                 +outputRating(location.rating)
               span.badge.pull-right.badge-default= location.distance
@@ -23,6 +22,6 @@ block content
             p
               each facility in location.facilities
                 span.label.label-warning= facility
-                | &nbsp;
+                &nbsp;
     .col-xs-12.col-sm-4
       p.lead= sidebar
